<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/ítreach"
            android:title="@string/search_menu"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="always"
            android:visible="false"
            />
        <item
            android:id="@+id/itgiohang"
            android:icon="@drawable/ic_shopping_cart_white_24dp"
            android:title="@string/giohang_menu"
            app:showAsAction="always"
            app:actionLayout="@layout/custom_item_menu_giohang_layout"
            />
        <item
            android:icon="@drawable/ic_more_vert_white_24dp"
            android:title="@string/more_menu"
            app:showAsAction="always">
            <menu >
                <item android:id="@+id/itDangNhap"
                    android:title="@string/DangNhap_menu"
                    android:icon="@drawable/ic_sentiment_satisfied_black_24dp"/>
                <item android:id="@+id/itThongBao"
                    android:title="@string/ThongBao_menu"
                    android:icon="@drawable/ic_notifications_none_black_24dp"/>
                <item android:id="@+id/itYeuThich"
                    android:title="@string/YeuThich_menu"
                    android:icon="@drawable/ic_favorite_border_black_24dp"/>
                <item android:id="@+id/itDonHang"
                    android:title="@string/DonHang_menu"
                    android:icon="@drawable/ic_content_paste_black_24dp"/>
                <item android:id="@+id/itCaiDat"
                    android:title="@string/CaiDat_menu"
                    android:icon="@drawable/ic_settings_black_24dp"/>
                <item android:id="@+id/itChinhSach"
                    android:title="@string/ChinhSach_menu"
                    android:icon="@drawable/ic_event_note_black_24dp"/>
                <item android:id="@+id/itTroGiup"
                    android:title="@string/TroGiup_menu"
                    android:icon="@drawable/ic_help_outline_black_24dp"/>
                <item android:id="@+id/itDangXuat"
                    android:title="Đăng Xuất"
                    android:icon="@drawable/ic_logout"
                    android:visible="false"/>
            </menu>
        </item>
</menu>