<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundplashscreen"
    tools:context="com.example.nhimcoi.clothesnails.View.DisplayScreen.DisplayScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="200dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:background="#80efecde">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconbag"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCam"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/TG_TamTayBan"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconmoney"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCam"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/Giao_hang"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconsercurity"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCam"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/Tieu_dung"/>
    </LinearLayout>
</FrameLayout>
